# internal/handler/account/route/role.go
@@ -1,12 +1,14 @@
 package route
 
 import (
-	"github.com/HasanNugroho/golang-starter/internal/handler"
+	handler "github.com/HasanNugroho/golang-starter/internal/handler/account"
+	"github.com/HasanNugroho/golang-starter/internal/middleware"
 	"github.com/labstack/echo/v4"
 )
 
-func NewRoleRoute(router *echo.Group, handler *handler.RoleHandler) {
+func NewRoleRoute(router *echo.Group, handler *handler.RoleHandler, authMiddleware *middleware.AuthMiddleware) {
 	route := router.Group("/v1/roles")
+	route.Use(authMiddleware.AuthRequired())
 	{
 		// route.Use(middleware.AuthMiddleware(app))
 		route.POST("", handler.Create)
