# internal/model/auth/auth.go
@@ -1,0 +1,14 @@
+package auth
+
+type (
+	LoginRequest struct {
+		Email    string
+		Password string
+	}
+
+	AuthResponse struct {
+		Token        string      `json:"token"`
+		RefreshToken string      `json:"refresh_token"`
+		Data         interface{} `json:"data"`
+	}
+)
